# descriptorCompareVer3

./: .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR_PLAN.md  CLAUDE.md  CMakeLists.txt  Dockerfile  PROJECT_STRUCTURE.md  analysis_fix.sh  cmake_replacement_script.sh  conanfile.txt  condasetup.sh  docker-compose.dev.yml  environment.yml  example_database_integration.cpp  example_database_usage.cpp  experiment_runner.sh  fix_cmake_targets.sh  fix_opencv_includes.sh  fix_stage2_redefinition.sh  fix_stage3_issues.sh  fix_validation_test.sh  miniforge_conda_setup.sh  plan.md  readme.md  setup.py  setup.sh  setup_analysis_environment.sh  stage2_modExperiment.sh  stage2_rollback_simple.sh  stage3_setup_fixed.sh  stage4.sh  stage6_final_setup.sh  stage7.sh  test_constants  test_constants.cpp  test_dnn_load.cpp  test_headers.cpp  test_headers_simple.cpp  test_new_types  test_new_types.cpp  (+7 more)
analysis/: requirements.txt
analysis/scripts/: export_fixed_hardnet.py  export_proper_hardnet.py  generate_report.py  precision_recall_analysis.py  python_dnn_experiment.py
analysis/templates/: experiment_template.yaml
build_test/: test_database_gtest  test_yaml_config_gtest
build_test/Testing/Temporary/: CTestCostData.txt
cli/: analysis_runner.cpp  experiment_runner.cpp  keypoint_manager.cpp
config/defaults/: README.md  dsp_gaussian.yaml  minimal.yaml  sift_baseline.yaml  stacking_sift_rgbsift.yaml
config/experiments/: dnn_hardnet_baseline.yaml  dnn_hardnet_baseline_m3.yaml  dnn_hardnet_baseline_m4.yaml  dnn_hardnet_baseline_m5.yaml  dnn_hardnet_baseline_m6.yaml  dnn_hardnet_baseline_m6_all.yaml  dnn_hardnet_locked_keypoints.yaml  dnn_hardnet_m6_all_locked.yaml  dnn_hardnet_m6_global_01.yaml  dnn_hardnet_m6_global_05.yaml  dnn_patch_example.yaml  dnn_sosnet_baseline.yaml  dsp_experiment.yaml  rgbsift_comparison.yaml  rgbsift_test.yaml  sample_experiment.yaml  sift_baseline.yaml  sift_baseline_all_locked.yaml  sift_baseline_locked_keypoints.yaml  sift_baseline_migration.yaml  sift_baseline_mini.yaml  sift_baseline_mini_independent.yaml  sift_baseline_mini_local.yaml  sift_dsp_gaussian.yaml  sift_dsp_test.yaml  sift_factorial.yaml  sift_locked_migration.yaml  sift_pooling_comparison.yaml  sift_rgbsift_stacking.yaml  sift_single_test.yaml  sift_stacking_test.yaml  sift_test_small.yaml  vgg_baseline.yaml  vgg_baseline_mini.yaml  vgg_baseline_mini_build.yaml  vgg_baseline_mini_local.yaml  vgg_baseline_mini_local_independent.yaml
database/: database_manager.cpp  database_manager.hpp  schema.sql  test_database.cpp
descriptor_compare/: experiment_config.cpp  experiment_config.hpp  experiment_config.hpp.stage1_backup  image_processor.cpp  image_processor.hpp  locked_in_keypoints.cpp  locked_in_keypoints.hpp  main.cpp  processor_utils.cpp  processor_utils.hpp
docs/: STAGE5_DATABASE_INTEGRATION.md  benchmarking.md  dnn_baselines.md  onnx_export_solution.md  pooling_semantics.md
docs/StatusDocs/: ARCHITECTURE_REFACTOR_PLAN.md
docs/adr/: 001-drop-backward-compatibility.md  002-schema-v1-strict.md  003-new-pipeline-default.md  004-vgg-non-pooled-comparator.md
include/thesis_project/: constants.hpp  conversion_utils.hpp  logging.hpp  types.hpp
include/thesis_project/database/: DatabaseIntegration.hpp  DatabaseManager.hpp
keypoints/: DSPSIFT.cpp  DSPSIFT.h  HoNC.cpp  HoNC.h  HoWH.cpp  HoWH.h  RGBSIFT.cpp  RGBSIFT.h  VanillaSIFT.cpp  VanillaSIFT.h
src/core/config/: ConfigurationBridge.cpp  ConfigurationBridge.hpp  ExperimentConfig.hpp  YAMLConfigLoader.cpp  YAMLConfigLoader.hpp  experiment_config.cpp
src/core/database/: DatabaseManager.cpp
src/core/descriptor/: DescriptorFactory.cpp  DescriptorFactory.hpp
src/core/integration/: MigrationToggle.cpp  MigrationToggle.hpp  ProcessorBridge.cpp  ProcessorBridge.hpp  ProcessorBridgeFacade.cpp  ProcessorBridgeFacade.hpp
src/core/keypoints/: locked_in_keypoints.cpp  locked_in_keypoints.hpp
src/core/matching/: BruteForceMatching.cpp  BruteForceMatching.hpp  MatchingFactory.cpp  MatchingFactory.hpp  MatchingStrategy.hpp
src/core/metrics/: ExperimentMetrics.hpp  MetricsCalculator.hpp  TrueAveragePrecision.cpp  TrueAveragePrecision.hpp
src/core/pooling/: DomainSizePooling.cpp  DomainSizePooling.hpp  NoPooling.cpp  NoPooling.hpp  PoolingFactory.cpp  PoolingFactory.hpp  PoolingStrategy.hpp  StackingPooling.cpp  StackingPooling.hpp  pooling_utils.hpp
src/core/processing/: image_processor.cpp  image_processor.hpp  processor_utils.cpp  processor_utils.hpp
src/core/visualization/: VisualVerification.cpp  VisualVerification.hpp
src/interfaces/: IDescriptorExtractor.hpp  IKeypointGenerator.hpp
src/utils/: conversion_utils.cpp  logger.cpp
tests/unit/: simple_interface_test.cpp  simple_interface_test_gtest.cpp  test_constants_gtest.cpp  test_new_types_gtest.cpp  test_yaml_config.cpp  test_yaml_config_gtest.cpp
tests/unit/config/: test_configuration_bridge_roundtrip_gtest.cpp  test_configuration_bridge_weighting_gtest.cpp  test_yaml_loader_bridge_gtest.cpp  test_yaml_schema_v1_gtest.cpp  test_yaml_validation_errors_gtest.cpp
tests/unit/database/: test_database.cpp  test_database_gtest.cpp  test_database_integration_simple.cpp  test_database_integration_simple_gtest.cpp  test_database_standalone.cpp  test_database_standalone_gtest.cpp
tests/unit/factories/: test_descriptor_factory_gtest.cpp  test_matching_factory_gtest.cpp
tests/unit/integration/: test_processor_bridge_facade_gtest.cpp  test_processor_utils_migration_gtest.cpp  test_processor_utils_routing_gtest.cpp  test_stage7_migration.cpp  test_stage7_migration_gtest.cpp  test_stage7_migration_parity_gtest.cpp  test_stage7_migration_routing_gtest.cpp  test_stage7_simple.cpp  test_stage7_simple_gtest.cpp
tests/unit/metrics/: test_experiment_metrics_gtest.cpp  test_metrics_calculator_gtest.cpp  test_true_average_precision_gtest.cpp
tests/unit/pooling/: test_domain_size_pooling_gtest.cpp  test_domain_size_pooling_procedural_gtest.cpp  test_domain_size_pooling_weighted_gtest.cpp  test_pooling_factory_gtest.cpp  test_stacking_pooling_gtest.cpp
z_oldfiles/: cleanup_and_organize.sh
(+21 files in other folders)
